Сервер с командами
Теперь можно управлять даже из браузера запущенной игрой!
Сервер реализован более менее на чуть чуть